@@ -3,6 +3,30 @@
 this repository contains the full copyright notices and license terms. -->
 <tryton>
     <data>
+        <record model="ir.ui.view" id="configuration_view_form">
+            <field name="model">account.configuration</field>
+            <field name="inherit" ref="account.configuration_view_form"/>
+            <field name="arch" type="xml">
+                <![CDATA[
+                <data>
+                    <xpath
+                        expr="/form"
+                        position="inside">
+                        <newline/>
+                        <label name="stock_journal"/>
+                        <field name="stock_journal"/>
+                        <newline/>
+                    </xpath>
+                </data>
+                ]]>
+            </field>
+        </record>
+
+        <record model="ir.property" id="property_stock_journal">
+            <field name="field"
+                search="[('model.model', '=', 'account.configuration'), ('name', '=', 'stock_journal')]"/>
+            <field name="value" eval="'account.journal,' + str(ref('account.journal_stock'))"/>
+        </record>
 
         <record model="account.account.type.template"
             id="account_type_template_asset_current_inventories">
