@@ -22,13 +22,6 @@ this repository contains the full copyright notices and license terms. -->
                         <field name="account_stock_supplier"/>
                         <label name="account_stock_lost_found"/>
                         <field name="account_stock_lost_found"/>
-                        <newline/>
-                        <label name="account_journal_stock_customer"/>
-                        <field name="account_journal_stock_customer"/>
-                        <label name="account_journal_stock_supplier"/>
-                        <field name="account_journal_stock_supplier"/>
-                        <label name="account_journal_stock_lost_found"/>
-                        <field name="account_journal_stock_lost_found"/>
                     </xpath>
                 </data>
                 ]]>
@@ -53,13 +46,6 @@ this repository contains the full copyright notices and license terms. -->
                         <field name="account_stock_supplier"/>
                         <label name="account_stock_lost_found"/>
                         <field name="account_stock_lost_found"/>
-                        <newline/>
-                        <label name="account_journal_stock_customer"/>
-                        <field name="account_journal_stock_customer"/>
-                        <label name="account_journal_stock_supplier"/>
-                        <field name="account_journal_stock_supplier"/>
-                        <label name="account_journal_stock_lost_found"/>
-                        <field name="account_journal_stock_lost_found"/>
                     </xpath>
                 </data>
                 ]]>
