@@ -1,3 +1,4 @@
+* Define "Stock Journal" on "Account Configuration"
 * Use cost price instead of unit price when cost method is "fixed"
 
 Version 2.2.0 - 2011-10-24
